<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanelUsuario">

    <!--
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/PanelUsuarioTitulo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/PanelUsuarioTitulo1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/panelUsuarioExplicacionCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/panelUsuarioExplicacionCorreo" />

        <EditText
            android:id="@+id/etPanelUsuarioCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etPanelUsuarioCorreo"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btnPanelUsuarioCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPanelUsuarioCorreo" />
    </LinearLayout>

    -->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37">

        <TextView
            android:id="@+id/panelUsuarioTitulo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/panelUsuarioTitulo2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/panelUsuarioExplicacionContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/panelUsuarioExplicacionContraseña" />

        <Button
            android:id="@+id/btnPanelUsuarioPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPanelUsuarioPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/panelUsuarioTituloCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/panelUsuarioTituloCuenta"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/panelUsuarioTitulo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/panelUsuarioTitulo3" />

        <Button
            android:id="@+id/btnPanelUsuarioBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPanelUsuarioBorrar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>